--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ body {
 table {
 	background-color: white;
     border-collapse: collapse;
-    width: 20%;
+    width: 35%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
@@ -17,7 +17,7 @@ table, td, th {
 }
 
 th {
-    background-color: #00a000;
+    background-color: #a8ce00;
     color: white;
 }
 
