--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,13 @@ th {
 tr:hover {
 	background-color:#f5f5f5;
 }
+
+#logo {
+    position: fixed;
+    height: auto; 
+    width: auto; 
+    max-width: 100px; 
+    max-height: 100px;
+    left: 120px;
+    top: 60px;
+}
