--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,14 @@ tr:hover {
 	background-color:#f5f5f5;
 }
 
+h1 {
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+}
+
+h2 {
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+}
+
 #logo {
     position: fixed;
     height: auto; 
